--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,8 @@
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#000000</color>
 
+    <!-- Lemonade -->
+    <color name="yellow_light">#ffff8b</color>
+    <color name="yellow_primary">#ffee58</color>
+    <color name="yellow_dark">#FFD600</color>
 </resources>
