feat: adding content for Project Dogglers (Unit 2 - Starter Template)

--- a/app/src/main/res/layout/activity_unit1.xml
+++ b/app/src/main/res/layout/activity_unit1.xml
@@ -101,6 +101,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:text="@string/unit_1_text_apps_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
     <Button
         android:id="@+id/btnLemonade"
         android:layout_width="wrap_content"
@@ -111,6 +123,6 @@
         android:text="@string/unit_1_button_apps_1"
         android:textAllCaps="false"
         android:textColor="#4E342E"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
