feat: adding logic for RecyclerViewAdapter (Project Dogglers: Done)

--- a/app/src/main/res/layout/grid_list_item.xml
+++ b/app/src/main/res/layout/grid_list_item.xml
@@ -44,7 +44,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- TODO: Create a TextView for each of the following:
+        <!-- Create a TextView for each of the following:
                 The dog's name
                 The dog's age
                 The dog's hobbies-->
