--- a/app/src/main/res/layout/activity_main_lunch_tray.xml
+++ b/app/src/main/res/layout/activity_main_lunch_tray.xml
@@ -19,6 +19,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- TODO: Add a FragmentContainerView with navigation/mobile_navigation as the navHost -->
+    <!-- Add a FragmentContainerView with navigation/mobile_navigation as the navHost -->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/navHostFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/mobile_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
