--- a/app/src/main/res/layout/activity_unit3.xml
+++ b/app/src/main/res/layout/activity_unit3.xml
@@ -149,7 +149,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLunchTray"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
