--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,13 +20,12 @@
     android:id="@+id/mobile_navigation"
     app:startDestination="@id/startOrderFragment">
 
-
     <fragment
         android:id="@+id/startOrderFragment"
         android:name="dev.witheredflowers.whativelearned.lunchtray.ui.order.StartOrderFragment"
-        android:label="fragment_start_order"
-        tools:theme="@style/Theme.LunchTray"
-        tools:layout="@layout/fragment_start_order" >
+        android:label="@string/title_start_order"
+        tools:layout="@layout/fragment_start_order"
+        tools:theme="@style/Theme.LunchTray">
         <action
             android:id="@+id/action_startOrderFragment_to_entreeMenuFragment"
             app:destination="@id/entreeMenuFragment" />
@@ -34,8 +33,8 @@
     <fragment
         android:id="@+id/entreeMenuFragment"
         android:name="dev.witheredflowers.whativelearned.lunchtray.ui.order.EntreeMenuFragment"
-        android:label="fragment_entree_menu"
-        tools:layout="@layout/fragment_entree_menu" >
+        android:label="@string/title_entree_menu"
+        tools:layout="@layout/fragment_entree_menu">
         <action
             android:id="@+id/action_entreeMenuFragment_to_sideMenuFragment"
             app:destination="@id/sideMenuFragment" />
@@ -48,8 +47,8 @@
     <fragment
         android:id="@+id/sideMenuFragment"
         android:name="dev.witheredflowers.whativelearned.lunchtray.ui.order.SideMenuFragment"
-        android:label="fragment_side_menu"
-        tools:layout="@layout/fragment_side_menu" >
+        android:label="@string/title_side_menu"
+        tools:layout="@layout/fragment_side_menu">
         <action
             android:id="@+id/action_sideMenuFragment_to_accompanimentMenuFragment"
             app:destination="@id/accompanimentMenuFragment" />
@@ -62,8 +61,8 @@
     <fragment
         android:id="@+id/accompanimentMenuFragment"
         android:name="dev.witheredflowers.whativelearned.lunchtray.ui.order.AccompanimentMenuFragment"
-        android:label="fragment_accompaniment_menu"
-        tools:layout="@layout/fragment_accompaniment_menu" >
+        android:label="@string/title_accompaniment_menu"
+        tools:layout="@layout/fragment_accompaniment_menu">
         <action
             android:id="@+id/action_accompanimentMenuFragment_to_checkoutFragment"
             app:destination="@id/checkoutFragment" />
@@ -76,8 +75,8 @@
     <fragment
         android:id="@+id/checkoutFragment"
         android:name="dev.witheredflowers.whativelearned.lunchtray.ui.order.CheckoutFragment"
-        android:label="fragment_checkout"
-        tools:layout="@layout/fragment_checkout" >
+        android:label="@string/title_checkout"
+        tools:layout="@layout/fragment_checkout">
         <action
             android:id="@+id/action_checkoutFragment_to_startOrderFragment"
             app:destination="@id/startOrderFragment"
