--- a/app/src/main/res/layout/fragment_accompaniment_menu.xml
+++ b/app/src/main/res/layout/fragment_accompaniment_menu.xml
@@ -51,11 +51,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <!-- TODO: set the accompaniment in the view model when the RadioButton is clicked -->
+                <!-- set the accompaniment in the view model when the RadioButton is clicked -->
                 <RadioButton
                     android:id="@+id/bread"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick='@{() -> viewModel.setAccompaniment("bread")}'
                     android:text='@{viewModel.menuItems["bread"].name}'
                     android:textAppearance="?attr/textAppearanceBody1"
                     tools:text="Accompaniment 1" />
@@ -79,11 +80,12 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/bread_description" />
 
-                <!-- TODO: set the accompaniment in the view model when the RadioButton is clicked -->
+                <!-- set the accompaniment in the view model when the RadioButton is clicked -->
                 <RadioButton
                     android:id="@+id/berries"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick='@{() -> viewModel.setAccompaniment("berries")}'
                     android:text='@{viewModel.menuItems["berries"].name}'
                     android:textAppearance="?attr/textAppearanceBody1"
                     tools:text="Accompaniment 2" />
@@ -109,24 +111,25 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/soup_description" />
 
-                <!-- TODO: set the RadioButton text to the accompaniment name using the view model -->
-                <!-- TODO: set the accompaniment in the view model when the RadioButton is clicked -->
+                <!-- set the RadioButton text to the accompaniment name using the view model -->
+                <!-- set the accompaniment in the view model when the RadioButton is clicked -->
                 <RadioButton
                     android:id="@+id/pickles"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick='@{() -> viewModel.setAccompaniment("pickles")}'
                     android:text='@{viewModel.menuItems["pickles"].name}'
                     android:textAppearance="?attr/textAppearanceBody1"
                     tools:text="Accompaniment 3" />
 
-                <!-- TODO: set the text to the accompaniment description using the view model -->
+                <!-- set the text to the accompaniment description using the view model -->
                 <TextView
                     android:id="@+id/pickles_description"
                     style="@style/Widget.MenuItem.TextView.Info"
                     android:text='@{viewModel.menuItems["pickles"].description}'
                     tools:text="Accompaniment 3 description" />
 
-                <!-- TODO: set the text to the accompaniment price using the view model -->
+                <!-- set the text to the accompaniment price using the view model -->
                 <TextView
                     android:id="@+id/pickles_price"
                     style="@style/Widget.MenuItem.TextView.Info"
@@ -146,10 +149,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/accompaniment_options" />
 
-            <!-- TODO: set the text to the current subtotal value from the view model -->
+            <!-- set the text to the current subtotal value from the view model -->
             <TextView
                 android:id="@+id/subtotal"
                 style="@style/Widget.LunchTray.TextView.Subtotal"
+                android:text="@{@string/subtotal(viewModel.subtotal)}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
                 tools:text="Subtotal $5.00" />
