--- a/app/src/main/res/layout/activity_not_yet_implemented.xml
+++ b/app/src/main/res/layout/activity_not_yet_implemented.xml
@@ -8,9 +8,12 @@
 
     <TextView
         android:id="@+id/textViewNYI"
-        android:layout_width="wrap_content"
+        android:layout_width="256dp"
         android:layout_height="wrap_content"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:text="@string/not_yet_implemented"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
