--- a/app/src/main/res/layout/activity_unit5.xml
+++ b/app/src/main/res/layout/activity_unit5.xml
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnForage"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
