--- a/app/src/main/res/layout/activity_unit6.xml
+++ b/app/src/main/res/layout/activity_unit6.xml
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnWaterMe"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
